--- a/index.html
+++ b/index.html
@@ -113,5 +113,13 @@
     </main>
     <!-- /main -->
 
+    <!-- Footer -->
+    <footer>
+        <p>&copy Copyright 
+        <br>
+         All rights reserved &hearts;</p>
+    </footer>
+    <!-- /Footer -->
+
 </body>
 </html>
