--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
             <ol>
                 <li>Numeri utili di emergenza</li>
                 <ul>
-                    <li>999 - Emergenza</li>
-                    <li>101 - Numero Polizia</li>
-                    <li>111 - Numero assistenza medica</li>
+                    <li><strong>999</strong> - Emergenza</li>
+                    <li><strong>101</strong> - Numero Polizia</li>
+                    <li><strong>111</strong> - Numero assistenza medica</li>
                 </ul>
 
                 <li>Hotel</li>
